devops/k8s/databases.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hms-postgres
  namespace: hms
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:14-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: hms-postgres
  namespace: hms
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgres
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hms-elasticsearch
  namespace: hms
  labels:
    app: elasticsearch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
        - name: elasticsearch
          image: elasticsearch:7.17.10
          ports:
            - containerPort: 9200
---
apiVersion: v1
kind: Service
metadata:
  name: hms-elasticsearch
  namespace: hms
spec:
  ports:
    - port: 9200
      targetPort: 9200
  selector:
    app: elasticsearch
